InternexDev_Sandbox/src/objects/FIU_Report__c.object
<CustomObject>
    <fields>
        <fullName>Client_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account</label>
        <referenceTo>Client_Account__c</referenceTo>
        <relationshipLabel>FIU Reports</relationshipLabel>
        <relationshipName>FIU_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closing_FIU_Balance__c</fullName>
        <label>Closing FIU Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_Time__c</fullName>
        <label>Created Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <label>Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opening_FIU_Balance__c</fullName>
        <label>Opening FIU Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentID__c</fullName>
        <label>PaymentID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payments__c</fullName>
        <label>Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Name__c</fullName>
        <label>Transaction Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>FIU Report</label>
    <nameField>
        <displayFormat>FIUR-{000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FIU Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>